--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ h2{
 p{
     font-size: 30px;
 }
+h3{
+    font-size: 70px;
+    font-weight: 900;
+}
+
+
 
 
 .container{
@@ -36,7 +42,7 @@ p{
 .about{
     border: solid 4px violet;
     align-self: center;
-margin: 30px;
+    margin: 30px;
 }
 .container2{
     display: flex;
@@ -68,4 +74,9 @@ margin: 30px;
     padding: 40px;
     margin-left: 300px;
     width: fit-content;
+    line-height: 2;
+}
+.typo{
+    font-size: 30px;
+    font-weight: 400;
 }
